fixed vacancy-card selector on mobile devices

--- a/styles/sass/vacancy-card.scss
+++ b/styles/sass/vacancy-card.scss
@@ -219,7 +219,7 @@
 }
 
 @media screen and (max-width: 576.02px) {
-    .vacancy {
+    .vacancy-card {
         &__content {
             h2 {
                 font-size: 32px;
